[project]
name = "pacap-reader"
version = "0.1.0"
description = ""
authors = [
    {name = "Diego Bavutti",email = "diegobavutti@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "pyshark (>=0.6,<0.7)",
    "tabulate (>=0.9.0,<0.10.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "scapy (>=2.6.1,<3.0.0)",
    "pyfiglet (>=1.0.3,<2.0.0)",
    "pyinstaller (>=6.14.1,<7.0.0)"
]

[tool.poetry]
packages = [{include = "pcap_reader", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
